# distributed-storage

./: .gitignore
public-tests/: Cargo.toml
public-tests/tests/: atomic_register.rs  sectors_manager.rs  system.rs  transfer.rs
solution/: Cargo.toml  README.md
solution/src/: atomic_register.rs  domain.rs  lib.rs  register_client.rs  sectors_manager.rs  system.rs  transfer.rs
test-utils/: Cargo.toml  atomic_register.rs  system.rs  transfer.rs
