[package]
name = "assignment-2-test-utils"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2021"

[dependencies]
tokio = {version = "1.34", features = ["full"] }
ntest = "0.9"
tempfile = "3.8"
env_logger = "0.10"
log = "0.4"
assignment-2-solution = { path = "../solution" }
uuid = { version = "1.6", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1"
async-channel = "2.1"
futures = "0.3"
rand = "0.8"

[lib]
name = "assignment_2_test_utils"
path = "lib.rs"
